# parquet

./: .gitignore  .pre-commit-config.yaml  pandas_conversion_performance.py  pyproject.toml  requirements.txt
benchmark/: 2023-10-07T00:04:30_41x61.csv  2023-10-07T00:09:04_91x91.csv  helper.ipynb  pandas_conversion_performance.py
parquet/: main.ipynb
